se agregan mas endpoint hasta empresa contratista
